# recommendation-system

./: .gitignore  Makefile  pyproject.toml
docs/: ml_canvas.md  ml_canvas_definitions.md  model_card.md  model_card_definitions.md  monitoring_plan.md
notebooks/: 01_eda.ipynb
src/recommendation_system/: main.py
