[project]
name = "recommendation-system"
version = "0.1.0"
description = "A system to recommend products for customers based on their past behavior."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "numpy>=2.4.6",
]

[build-system]
requires = ["uv_build>=0.7.19,<0.8.0"]
build-backend = "uv_build"

[project.scripts]
sanity = "recommendation_system.main:hello"

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "kaggle>=2.2.2",
    "matplotlib>=3.11.0",
    "mypy>=2.1.0",
    "pandas>=3.0.3",
    "polars>=1.41.2",
    "pyarrow>=24.0.0",
    "pytest>=9.1.0",
    "ruff>=0.15.17",
    "seaborn>=0.13.2",
    "torch>=2.12.1",
]

[tool.ruff.format]
quote-style = "double"
